--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 .App {
-  text-align: center;
+  /* text-align: center; */
   height: 100vh;
   background-color: #00004d;
 }
