--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,10 @@ code {
   border-radius: 0.5rem;
   margin: 0.3rem;
 }
+.active{
+  color: #15b3fc !important;
+  font-weight:bold !important;
+  border-bottom: 2px solid #15b3fc !important
+}
 
 
